# image_processor

./: CMakeLists.txt  LICENSE  README.md  application.cpp  application.h  base_filters.cpp  base_filters.h  bitmap.cpp  bitmap.h  cmd_arg_params.cpp  cmd_arg_params.h  exception.h  filter_pipeline_factory.cpp  filter_pipeline_factory.h  image_processor.cpp  test.cpp
